--- a/Mirim_Porject_0407_2/app/src/main/res/layout/activity_main.xml
+++ b/Mirim_Porject_0407_2/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:text="textSize 속성"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:textColor="@color/teal_200"
+        android:text="textColor 속성"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:textStyle="bold|italic"
+        android:text="textSize 속성"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:typeface="serif"
+        android:text="textSize 속성"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:singleLine="true"
+        android:text="singleLin 속성singleLin 속성singleLin 속성singleLin 속성singleLin 속성singleLin 속성singleLin 속성singleLin 속성singleLin 속성"
+        />
 
 </LinearLayout>
