직접 풀어보기 4-3 나머지 값 버튼 추가

--- a/Mirirm_project_0412_2/app/src/main/res/layout/activity_main.xml
+++ b/Mirirm_project_0412_2/app/src/main/res/layout/activity_main.xml
@@ -60,10 +60,18 @@
         android:layout_marginTop="15dp"
         android:padding="15dp"
         android:text="@string/btn_divide"/>
+    <Button
+        android:id="@+id/btn_mod"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:padding="15dp"
+        android:text="@string/btn_mod"/>
     <TextView
         android:id="@+id/text_result"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="15dp"
         android:text="@string/text_result"
         android:textColor="#ff0000"
         android:textSize="30sp"
