라디오버튼에 따라 이미지 변경2

--- a/Mirim_Project_0414_1/app/src/main/res/layout/activity_main.xml
+++ b/Mirim_Project_0414_1/app/src/main/res/layout/activity_main.xml
@@ -14,13 +14,12 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="@string/text_start"/>
-    <CheckBox
-        android:id="@+id/check_start"
+    <Switch
+        android:id="@+id/switch_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:text="@string/check_start"
-        />
+        android:text="@string/switch_start"/>
     <LinearLayout
         android:id="@+id/linear_sub"
         android:visibility="invisible"
@@ -59,12 +58,6 @@
                 android:textSize="17sp"
                 android:text="@string/radio_rabbit"/>
         </RadioGroup>
-        <Button
-            android:id="@+id/but_done"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:text="@string/btn_done"/>
         <ImageView
             android:id="@+id/imgv"
             android:layout_width="match_parent"
