프로그램 종료 버튼

--- a/Mirim_Project_0414_1/app/src/main/res/layout/activity_main.xml
+++ b/Mirim_Project_0414_1/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,11 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:src="@drawable/dog"/>
+        <Button
+            android:id="@+id/btn_finish"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="종료"/>
     </LinearLayout>
 
 </LinearLayout>
