--- a/Mirim_Project_0414_1/app/src/main/res/layout/activity_main.xml
+++ b/Mirim_Project_0414_1/app/src/main/res/layout/activity_main.xml
@@ -69,6 +69,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="종료"/>
+        <Button
+            android:id="@+id/btn_first"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="처음으로"/>
     </LinearLayout>
 
 </LinearLayout>
