--- a/MirimPromject_0512_1/app/src/main/res/layout/relative.xml
+++ b/MirimPromject_0512_1/app/src/main/res/layout/relative.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <LinearLayout
+    android:layout_height="match_parent">
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_margin="10dp">
         <TextView
+            android:id="@+id/base1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="전화번호"
@@ -17,24 +16,27 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/base1"
             android:textSize="20sp"
             android:hint="000-0000-0000"/>
-    </LinearLayout>
-    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="right"
         android:layout_margin="10dp">
+
         <Button
+            android:id="@+id/base"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="입력"
-            />
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/base1"
             android:text="취소"
             />
-    </LinearLayout>
-</LinearLayout>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/base"
+            android:layout_below="@+id/base1"
+            android:text="입력"
+            />
+    </RelativeLayout>
+</RelativeLayout>
