--- a/Mirim_Project_0519_1/app/src/main/res/layout/activity_main.xml
+++ b/Mirim_Project_0519_1/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,20 @@
             android:layout_height="match_parent"
             android:background="#ff0000"
             android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="정경호"
+                android:textStyle="bold"
+                android:gravity="center_horizontal"
+                android:textSize="30sp"
+                />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="10dp"
+                android:src="@drawable/jeing"
+                />
 
         </LinearLayout>
         <LinearLayout
@@ -55,6 +69,20 @@
             android:layout_height="match_parent"
             android:background="#ffff00"
             android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="정경호2"
+                android:gravity="center_horizontal"
+                android:textStyle="bold"
+                android:textSize="30sp"
+                />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="10dp"
+                android:src="@drawable/ok"
+                />
 
         </LinearLayout>
         <LinearLayout
@@ -63,6 +91,20 @@
             android:layout_height="match_parent"
             android:background="#0000ff"
             android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="정경호3"
+                android:gravity="center_horizontal"
+                android:textStyle="bold"
+                android:textSize="30sp"
+                />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="10dp"
+                android:src="@drawable/jeing"
+                />
 
         </LinearLayout>
     </FrameLayout>
