--- a/Mirim_Project_0519_3/app/src/main/res/layout/activity_main.xml
+++ b/Mirim_Project_0519_3/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
     <Chronometer
-        android:id="@+id/time"
+        android:id="@+id/timer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
@@ -22,28 +22,48 @@
         android:text="예약 시작 버튼"
         />
     <RadioGroup
+        android:id="@+id/rg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <RadioButton
+            android:id="@+id/radio_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="날짜 설정(캘린더 뷰)"/>
         <RadioButton
+            android:id="@+id/radio_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="true"
             android:text="시간 설정"/>
     </RadioGroup>
     <FrameLayout
+        android:id="@+id/frame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <CalendarView
-            android:visibility="invisible"
+            android:id="@+id/date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <TimePicker
+            android:id="@+id/time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:timePickerMode="spinner"/>
     </FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_done"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="15dp"
+            android:text="예약완료"/>
+        <TextView
+            android:id="@+id/text_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 </LinearLayout>
