--- a/Mirim_Project_0519_3/app/src/main/res/layout/activity_main.xml
+++ b/Mirim_Project_0519_3/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
         <TextView
             android:id="@+id/text_result"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="0000년 00월 00일 00시 00분"/>
     </LinearLayout>
 </LinearLayout>
