--- a/Mrirm_Project_0726_2/app/src/main/res/layout/activity_main.xml
+++ b/Mrirm_Project_0726_2/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/linear1"
     android:orientation="vertical"
+    android:gravity="center_horizontal"
     tools:context=".MainActivity">
 
     <Button
@@ -19,5 +20,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="버튼변경"/>
+    <Button
+        android:id="@+id/btn_toast"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="토스트출력"/>
 
 </LinearLayout>
