라디오 버튼 commit

--- a/Mrirm_Project_0726_2/app/src/main/res/layout/activity_main.xml
+++ b/Mrirm_Project_0726_2/app/src/main/res/layout/activity_main.xml
@@ -25,5 +25,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="토스트출력"/>
-
+    <Button
+        android:id="@+id/btn_dialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="대화상자출력"/>
+    <Button
+        android:id="@+id/btn_dialog_lest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="목록대화상자출력"/>
+    <Button
+        android:id="@+id/btn_dialog_radio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="라디오버튼목록대화상자"/>
 </LinearLayout>
