textView->editText commit

--- a/Mirim_Project_0727_12/app/src/main/res/layout/activity_main.xml
+++ b/Mirim_Project_0727_12/app/src/main/res/layout/activity_main.xml
@@ -9,20 +9,22 @@
     android:padding="20dp"
     tools:context=".MainActivity">
 
-    <TextView
+    <EditText
         android:id="@+id/text_name"
         android:layout_marginBottom="15dp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="사용자이름"
+        android:hint="사용자이름"
+        android:editable="false"
         android:textSize="25sp"
         android:textColor="#03A9F4"/>
-    <TextView
+    <EditText
         android:id="@+id/text_email"
         android:layout_marginBottom="15dp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="E-mail"
+        android:editable="false"
+        android:hint="E-mail"
         android:textSize="25sp"
         android:textColor="#03A9F4"/>
     <Button
