--- a/Mirim_Project_0727_12/app/src/main/res/layout/dialog1.xml
+++ b/Mirim_Project_0727_12/app/src/main/res/layout/dialog1.xml
@@ -14,7 +14,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="사용자이름"/>
+        android:text="사용자이메일"/>
     <EditText
         android:id="@+id/edit_email"
         android:layout_width="match_parent"
