--- a/Mirirm_Project_0727_03/app/src/main/res/layout/activity_third_activty.xml
+++ b/Mirirm_Project_0727_03/app/src/main/res/layout/activity_third_activty.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:padding="30dp"
-    android:background="#AAAAff"
+    android:background="#ffAAff"
     android:orientation="vertical"
     tools:context=".SecondActivity">
     <Button
@@ -14,15 +14,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이전으로"/>
-    <TextView
-        android:id="@+id/text_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:textColor="#ffffff"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:text="제목나올 부분"/>
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
