--- a/Mirim_Project_BMI/app/src/main/res/layout/activity_main.xml
+++ b/Mirim_Project_BMI/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="20dp"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     tools:context=".MainActivity">
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,6 +27,7 @@
             android:textSize="20sp"
             android:text="이름 : "/>
         <EditText
+            android:id="@+id/edit_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="이름을 입력 하세요"/>
@@ -42,6 +43,7 @@
             android:textSize="20sp"
             android:text="체중 : "/>
         <EditText
+            android:id="@+id/edit_weight"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="체중을 입력 하세요"/>
@@ -57,11 +59,13 @@
             android:textSize="20sp"
             android:text="키 : "/>
         <EditText
+            android:id="@+id/edit_height"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="키를 입력 하세요"/>
     </LinearLayout>
     <Button
+        android:id="@+id/btn_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
