--- a/Mirim_Project_0728_3/app/src/main/res/layout/activity_result.xml
+++ b/Mirim_Project_0728_3/app/src/main/res/layout/activity_result.xml
@@ -10,6 +10,26 @@
     tools:context=".ResultActivity">
     <TableRow
         android:layout_marginBottom="15dp">
+        <ImageView
+            android:id="@+id/imgv"
+            android:layout_width="200dp"
+            android:layout_height="250dp"
+            android:layout_span="2"
+            android:layout_gravity="center"
+            android:src="@drawable/img01"/>
+    </TableRow>
+    <TableRow
+        android:layout_marginBottom="5dp">
+        <TextView
+            android:id="@+id/textv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_span="2"
+            android:layout_gravity="center"
+            android:text="dd"/>
+    </TableRow>
+    <TableRow
+        android:layout_marginBottom="5dp">
         <TextView
             android:id="@+id/text01"
             android:layout_width="match_parent"
@@ -21,11 +41,11 @@
             android:id="@+id/rb1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleIndicator"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_gravity="right"/>
     </TableRow>
     <TableRow
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="5dp">
         <TextView
             android:id="@+id/text02"
             android:layout_width="match_parent"
@@ -37,11 +57,11 @@
             android:id="@+id/rb2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleIndicator"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_gravity="right"/>
     </TableRow>
     <TableRow
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="5dp">
         <TextView
             android:id="@+id/text03"
             android:layout_width="match_parent"
@@ -53,11 +73,11 @@
             android:id="@+id/rb3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleIndicator"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_gravity="right"/>
     </TableRow>
     <TableRow
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="5dp">
         <TextView
             android:id="@+id/text04"
             android:layout_width="match_parent"
@@ -69,11 +89,11 @@
             android:id="@+id/rb4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleIndicator"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_gravity="right"/>
     </TableRow>
     <TableRow
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="5dp">
         <TextView
             android:id="@+id/text05"
             android:layout_width="match_parent"
@@ -85,11 +105,11 @@
             android:id="@+id/rb5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleIndicator"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_gravity="right"/>
     </TableRow>
     <TableRow
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="5dp">
         <TextView
             android:id="@+id/text06"
             android:layout_width="match_parent"
@@ -101,11 +121,11 @@
             android:id="@+id/rb6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleIndicator"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_gravity="right"/>
     </TableRow>
     <TableRow
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="5dp">
         <TextView
             android:id="@+id/text07"
             android:layout_width="match_parent"
@@ -117,11 +137,11 @@
             android:id="@+id/rb7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleIndicator"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_gravity="right"/>
     </TableRow>
     <TableRow
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="5dp">
         <TextView
             android:id="@+id/text08"
             android:layout_width="match_parent"
@@ -133,11 +153,11 @@
             android:id="@+id/rb8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleIndicator"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_gravity="right"/>
     </TableRow>
     <TableRow
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="5dp">
         <TextView
             android:id="@+id/text09"
             android:layout_width="match_parent"
@@ -149,15 +169,14 @@
             android:id="@+id/rb9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleIndicator"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_gravity="right"/>
     </TableRow>
     <TableRow
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="5dp">
         <Button
             android:id="@+id/btn_home"
             android:layout_span="2"
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="돌아가기"/>
