--- a/Mirim_Project_2022_0729/app/src/main/res/layout/activity_main.xml
+++ b/Mirim_Project_2022_0729/app/src/main/res/layout/activity_main.xml
@@ -19,9 +19,36 @@
         android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    <RadioGroup
+        android:id="@+id/rg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp">
+        <RadioButton
+            android:id="@+id/rd1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="더하기"/>
+        <RadioButton
+            android:id="@+id/rd2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="빼기"/>
+        <RadioButton
+            android:id="@+id/rd3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="곱하기"/>
+        <RadioButton
+            android:id="@+id/rd4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="나누기"/>
+    </RadioGroup>
     <Button
         android:id="@+id/btn_plus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="더하기"/>
+        android:text="계산하기"/>
 </LinearLayout>
