--- a/Mirim_Project_0803_SQLite/app/src/main/res/layout/activity_main.xml
+++ b/Mirim_Project_0803_SQLite/app/src/main/res/layout/activity_main.xml
@@ -44,19 +44,42 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:textSize="10dp"
             android:text="초기화"/>
         <Button
             android:id="@+id/btn_input"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:textSize="10dp"
+            android:layout_weight="1"
             android:text="입력"/>
+        <Button
+            android:id="@+id/btn_update"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="10dp"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:text="수정"/>
+        <Button
+            android:id="@+id/btn_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="10dp"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:text="삭제"/>
         <Button
             android:id="@+id/btn_such"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="10dp"
+            android:layout_weight="1"
             android:layout_marginLeft="10dp"
             android:text="조회"/>
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
