--- a/Mirim_Project_0804_MP3Player/app/src/main/res/layout/activity_main.xml
+++ b/Mirim_Project_0804_MP3Player/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:orientation="horizontal">
         <Button
             android:id="@+id/btn_play"
@@ -47,17 +47,26 @@
         </Button>
     </LinearLayout>
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="bottom">
         <TextView
             android:id="@+id/tvMP3"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="실행중인 음악"/>
-        <ProgressBar
-            android:id="@+id/pro_bar"
-            android:visibility="invisible"
+            android:layout_marginBottom="20dp"
+            android:text="실행중인 음악 : "/>
+        <TextView
+            android:id="@+id/tvTiem"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="진행시간 : "/>
+        <SeekBar
+            android:id="@+id/seek_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"/>
     </LinearLayout>
 </LinearLayout>
